--- a/MITClab/other_semesters_course_practices/MITc10.25上課教學.ipynb
+++ b/MITClab/other_semesters_course_practices/MITc10.25上課教學.ipynb
@@ -142,42 +142,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1"
+       "20"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "1 or 1"
+    "20 or 10"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1"
+       "10"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "1 and 1"
+    "20 and 10"
    ]
   },
   {
@@ -395,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -404,13 +404,13 @@
        "False"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "\"aa\">\"b\""
+    "\"aa\"<\"a\""
    ]
   },
   {
@@ -843,13 +843,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "range(1, 8)"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "range?"
+    "range?\n",
+    "range(1,8)"
    ]
   },
   {
@@ -1122,14 +1132,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "1\n",
       "apple\n",
+      "2\n",
       "cherry\n"
      ]
     }
@@ -1137,15 +1149,18 @@
    "source": [
     "# continue 跳過當前循環體中的當次迴圈(i)，進入下一次迴圈(i+1)，並回上一層繼續執行迴圈外的程式\n",
     "fruits = [\"apple\", \"banana\", \"cherry\"]\n",
+    "test = 0\n",
     "for x in fruits:\n",
     "    if x == \"banana\":\n",
     "        continue\n",
+    "    test = test + 1\n",
+    "    print(test)\n",
     "    print(x)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -1159,10 +1174,16 @@
    "source": [
     "# break 直接跳出迴圈後，會繼續執行迴圈外的程式\n",
     "fruits = [\"apple\", \"banana\", \"cherry\"]\n",
-    "for x in fruits:\n",
-    "    if x == \"banana\":\n",
+    "# for x in fruits:\n",
+    "#     if x == \"banana\":\n",
+    "#         break\n",
+    "#     print(x)\n",
+    "x = 0\n",
+    "while x < len(fruits) :\n",
+    "    if fruits[x] == \"banana\":\n",
     "        break\n",
-    "    print(x)"
+    "    print(fruits[x])\n",
+    "    x+=1    "
    ]
   },
   {
@@ -1194,46 +1215,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "*\n",
-      "**\n",
-      "***\n",
-      "****\n",
-      "*****\n",
-      "******\n",
-      "*******\n",
-      "********\n",
-      "*********\n"
+      "enter the number of stars for the longest line for each triangle: 10\n",
+      "********************\n",
+      "*********  *********\n",
+      "********    ********\n",
+      "*******      *******\n",
+      "******        ******\n",
+      "*****          *****\n",
+      "****            ****\n",
+      "***              ***\n",
+      "**                **\n",
+      "*                  *\n",
+      "*                  *\n",
+      "**                **\n",
+      "***              ***\n",
+      "****            ****\n",
+      "*****          *****\n",
+      "******        ******\n",
+      "*******      *******\n",
+      "********    ********\n",
+      "*********  *********\n",
+      "********************\n"
      ]
     }
    ],
    "source": [
-    "s=1\n",
-    "while s<10:\n",
-    "    print(\"*\"*s)\n",
-    "    s=s+1"
+    "star_num_input = input(\"enter the number of stars for the longest line for each triangle: \")\n",
+    "star_num = int(star_num_input)\n",
+    "start_line = 0\n",
+    "start_line_up = 0\n",
+    "start_line_down = 1\n",
+    "while start_line <= star_num*2:\n",
+    "    if start_line < star_num :\n",
+    "        print(\"*\"*(star_num-start_line_up) + \" \"*(2*(start_line_up)) + \"*\"*(star_num-(start_line_up)))\n",
+    "        start_line_up = start_line_up + 1\n",
+    "#     elif start_line == (star_num*2) :\n",
+    "#         print(\"*\"*(2*star_num))\n",
+    "    elif start_line > star_num :\n",
+    "        print(\"*\"*(start_line_down) + \" \"*(2*(star_num-(start_line_down))) + \"*\"*(start_line_down)) \n",
+    "        start_line_down = start_line_down + 1\n",
+    "    start_line = start_line + 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      ">> 再見\n",
-      "你好\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "mm = \"\"\n",
     "while mm !=\"bye\" and mm !=\"再見\":\n",
@@ -1277,14 +1312,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      ">>17\n",
+      ">>9\n",
+      "3\n",
       "質數\n"
      ]
     }
@@ -1299,6 +1335,7 @@
     "    else:\n",
     "        p=0\n",
     "    i+=1\n",
+    "    print(i)\n",
     "if(p==0):\n",
     "    print(\"質數\")"
    ]
@@ -1805,9 +1842,77 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 10\n",
+    "b = 0\n",
+    "print(a and b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'name': 'bill', 'number': '104306093'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = dict({\n",
+    "    \"123\" : {\n",
+    "        \"name\" : \"bill\",\n",
+    "        \"number\" : \"104306093\"\n",
+    "    }\n",
+    "})\n",
+    "print(a[\"123\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-1"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "-32 % 11 \n",
+    "32 % -11"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": []
   }
@@ -1828,7 +1933,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
